// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Column 1`] = `
<div
  className="column"
/>
`;

exports[`Column 2`] = `
<div
  className="column is-1"
/>
`;

exports[`Column 3`] = `
<div
  className="column is-1 is-narrow"
>
  Content
</div>
`;
